# paylink

./: .gitignore  README.md  main.py  pyproject.toml
static/: sw.js
templates/: error_page.html  expired.html  paid.html  payment_cancelled.html  payment_page.html  payment_success.html
