[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["subhamsarangi <subhamsarangi2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stripe = "^11.2.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
jinja2 = "^3.1.5"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
